[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-live"
version = "0.1.0"
description = "Interactive HTML tables and Pyodide-powered graphs for evaluation results"
requires-python = ">=3.10"

[tool.setuptools.package-data]
eval_live = ["*.js", "*.css", "*.py", "*.html"]
